hotfix/sprint13 fixing toggle z-index

--- a/bfg-main/bfg-ui/src/styles.scss
+++ b/bfg-main/bfg-ui/src/styles.scss
@@ -89,3 +89,7 @@ mat-form-field {
         justify-content: center;
     }
 }
+
+.mat-slide-toggle-thumb-container {
+    z-index: 0 !important;
+}
